<resources>
    <string name="app_name">TripSync</string>
    <string name="criar_viagem">Criar Viagem</string>
    <string name="nome_da_viagem">Nome da Viagem*</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="classificacao">Classificação</string>
    <string name="locais_visitados">Locais Visitados</string>
    <string name="adicionar_remover_local">Adicionar/Remover Local</string>
    <string name="adicionar_local">Adicionar Local</string>
    <string name="remover_ultimo_local">Remover Último Local</string>
    <string name="criar">CRIAR +</string>
    <string name="voltar">Voltar</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="selecionar_foto">Selecionar Foto</string>
    <string name="remover_foto">Remover Foto</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="salvar">Salvar</string>
    <string name="terminar_sessao">Terminar Sessão</string>
    <string name="editar_viagem">Editar Viagem</string>
    <string name="nome_da_viagem_asterix">Nome da Viagem*</string>
    <string name="digite_o_nome_da_viagem">Digite o nome da viagem</string>
    <string name="digite_a_data">Digite a data</string>
    <string name="digite_a_descricao">Digite a descrição</string>
    <string name="digite_a_classificacao">Digite a classificação</string>
    <string name="fotos_da_viagem">Fotos da Viagem</string>
    <string name="carregue_para_acessar_fotos">Carregue para acessar fotos</string>
    <string name="adicionar_fotos">Adicionar Fotos</string>
    <string name="perfil">Perfil</string>
    <string name="viagens_allcaps">VIAGENS</string>
    <string name="filtros">FILTROS +</string>
    <string name="criar_allcaps">CRIAR ＋</string>
    <string name="logo_tripsync">Logo Tripsync</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Esqueci-me da password</string>
    <string name="entrar_allcaps">ENTRAR</string>
    <string name="registar_allcaps">REGISTAR</string>
    <string name="icone_utilizador">Ícone utilizador</string>
    <string name="registo">REGISTO</string>
    <string name="username">Username</string>
    <string name="imagem_de_perfil">Imagem de Perfil</string>
    <string name="imagem_da_foto">Imagem da Foto</string>
    <string name="descricao_da_foto">Descrição da Foto</string>
    <string name="data_da_foto">Data da Foto</string>
    <string name="local">Local</string>
    <string name="excluir">Excluir</string>
    <string name="local_1">Local 1</string>
    <string name="digite_o_local_visitado">Digite o local visitado</string>
    <string name="compartilhar_viagem">Compartilhar Viagem</string>
    <string name="necessario_pelo_menos_1_local">É necessário pelo menos um local!</string>
    <string name="nome_da_viagem_obrigatorio">Nome da viagem é obrigatório</string>
    <string name="a_criar_viagem">A criar viagem...</string>
    <string name="viagem_criada_com_sucesso">Viagem criada com sucesso!</string>
    <string name="erro_ao_criar_viagem">Erro ao criar viagem:</string>
    <string name="utilizador_nao_autenticado">Utilizador não autenticado</string>
    <string name="no_pfp_para_remover">Não há foto de perfil para remover</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="u_sure_remover_foto_perfil">Tem a certeza que deseja remover a foto de perfil?</string>
    <string name="foto_sera_removida">Foto será removida ao salvar as alterações</string>
    <string name="foto_marcada_para_remocao">Foto marcada para remoção</string>
    <string name="tem_a_certeza_que_deseja_sair_da_sua_conta">Tem a certeza que deseja sair da sua conta?</string>
    <string name="erro_ao_carregar_dados">Erro ao carregar dados:</string>
    <string name="preencha_os_campos_obrigatorios">Preencha os campos obrigatórios</string>
    <string name="a_salvar_alteracoes">A salvar alterações...</string>
    <string name="nao_e_possivel_alterar_email">Não é possível alterar o email nesta versão</string>
    <string name="password_atualizada">Password atualizada com sucesso!</string>
    <string name="erro_ao_atualizar_senha">Erro ao atualizar senha:</string>
    <string name="erro_ao_salvar_imagem">Erro ao salvar imagem:</string>
    <string name="dados_atualizados">Dados atualizados com sucesso!</string>
    <string name="erro_ao_atualizar_dados">Erro ao atualizar dados:</string>
    <string name="uma_foto">1 Foto</string>
    <string name="fotos">Fotos</string>
    <string name="o_nome_da_viagem_obrigatorio">O nome da viagem é obrigatório</string>
    <string name="viagem_atualizada">Viagem atualizada com sucesso!</string>
    <string name="erro_ao_atualizar_viagem">Erro ao atualizar viagem:</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="a_iniciar_sessao">A iniciar sessão...</string>
    <string name="verifique_o_seu_email">Por favor, verifique o seu email antes de fazer login</string>
    <string name="email_nao_verificado">Email não verificado</string>
    <string name="deseja_reenviar_o_email">Deseja reenviar o email de verificação?</string>
    <string name="email_reenviado">Email de verificação reenviado</string>
    <string name="erro_ao_reenviar_email">Erro ao reenviar email:</string>
    <string name="falha_no_login">Falha no login:</string>
    <string name="insira_o_seu_email_para_recuperar_a_senha">Insira o seu email para recuperar a senha</string>
    <string name="email_de_recuperacao_enviado_para">Email de recuperação enviado para:</string>
    <string name="erro_ao_enviar_email_de_recuperacao">Erro ao enviar email de recuperação:</string>
    <string name="informe_o_email">Informe o Email</string>
    <string name="informe_a_password">Informe a Password</string>
    <string name="password_6_chars_min">A password deve ter pelo menos 6 caracteres</string>
    <string name="informe_o_seu_username">Informe o seu Username</string>
    <string name="informe_o_seu_nome">Informe o seu Nome</string>
    <string name="a_registar_utilizador">A registar utilizador...</string>
    <string name="email_de_verificacao_enviado_para">Email de verificação enviado para:</string>
    <string name="erro_ao_salvar_dados">Erro ao salvar dados:</string>
    <string name="erro_ao_registar">Erro ao registar:</string>
    <string name="erro_ao_carregar_viagens">Erro ao carregar viagens:</string>
    <string name="excluir_viagem">Excluir Viagem</string>
    <string name="deseja_realmente_excluir_a_viagem">Deseja realmente excluir a viagem</string>
    <string name="desfazer">DESFAZER</string>
    <string name="viagem_excluida">Viagem excluída</string>
    <string name="erro_ao_excluir">Erro ao excluir:</string>
    <string name="nome_z_a">Nome (Z-A)</string>
    <string name="nome_a_z">Nome (A-Z)</string>
    <string name="data_mais_antiga">Data (Mais Antiga)</string>
    <string name="data_mais_recente">Data (Mais Recente)</string>
    <string name="quero_compartilhar">Olá! Quero compartilhar esta viagem contigo:\n</string>
    <string name="nome_2pontos">Nome:</string>
    <string name="data_2pontos">Data:</string>
    <string name="classificacao_2pontos">Classificação:</string>
    <string name="descricao_2pontos">Descrição:</string>
    <string name="partilhado_atraves">Partilhado através do TripSync!</string>
    <string name="erro_ao_carregar_dados_da_viagem">Erro ao carregar dados da viagem:</string>
    <string name="erro_ao_carregar_fotos">Erro ao carregar fotos:</string>
    <string name="selecione_fotos">Selecione Fotos</string>
    <string name="excluir_foto">Excluir Foto</string>
    <string name="tem_certeza_que_deseja_excluir_esta_foto">Tem certeza que deseja excluir esta foto?</string>
    <string name="foto_excluida_com_sucesso">Foto excluída com sucesso</string>
    <string name="erro_ao_excluir_foto">Erro ao excluir foto:</string>
    <string name="detalhes_atualizados_com_sucesso">Detalhes atualizados com sucesso</string>
    <string name="erro_ao_atualizar_detalhes">Erro ao atualizar detalhes:</string>
    <string name="a_processar_fotos">A processar fotos...</string>
    <string name="fotos_adicionadas_com_sucesso">Fotos adicionadas com sucesso</string>
    <string name="erro_ao_processar_fotos">Erro ao processar fotos:</string>
    <string name="proximo">Próximo</string>
    <string name="bem_vindo_ao_tripsync">Bem-vindo ao TripSync!</string>
    <string name="a_unica_aplicacao_que">A única aplicação que precisas para gerir as tuas viagens.</string>
    <string name="farto_de_confusoes">Farto de confusões?</string>
    <string name="tu_decides_o_que_fazer">Tu decides o que fazer, nós ajudamos-te a organizar.</string>
    <string name="estas_pronto">Estás pronto?</string>
    <string name="a_tua_jornada_comeca_aqui">A tua jornada começa aqui!</string>
    <string name="comecar">Começar</string>
</resources>