<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.EditarPerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="start|top"
            android:contentDescription="@string/voltar"
            android:src="@drawable/back"
            app:tint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_perfil"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imagem_de_perfil"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btnSelecionarFotoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecionar_foto"
                style="@style/TEXT"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnRemoverFotoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remover_foto"
                style="@style/TEXT"
                android:backgroundTint="@color/colorAccent" />
        </LinearLayout>

        <EditText
            android:id="@+id/etNome"
            android:autofillHints="name"
            android:hint="@string/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/etUsername"
            android:autofillHints="username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <EditText
            android:id="@+id/etEmail"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etPassword"
            android:autofillHints="password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnSalvar"
            android:text="@string/salvar"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminar_sessao"
            style="@style/TEXT"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FF5722"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>