<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_tripsync"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/TEXT"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="6dp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            style="@style/TEXT"
            android:textSize="12sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar_allcaps"
            android:backgroundTint="#007BFF"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registar_allcaps"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
